--- a/Property Mining.ipynb
+++ b/Property Mining.ipynb
@@ -2,9 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: en_core_web_sm==2.3.1 from https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz#egg=en_core_web_sm==2.3.1 in /opt/miniconda3/lib/python3.8/site-packages (2.3.1)\n",
+      "Requirement already satisfied: spacy<2.4.0,>=2.3.0 in /opt/miniconda3/lib/python3.8/site-packages (from en_core_web_sm==2.3.1) (2.3.2)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (2.0.3)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (2.23.0)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (4.46.0)\n",
+      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (1.0.0)\n",
+      "Requirement already satisfied: blis<0.5.0,>=0.4.0 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (0.4.1)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (0.8.0)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (1.0.2)\n",
+      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (1.0.2)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (1.16.3)\n",
+      "Requirement already satisfied: thinc==7.4.1 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (7.4.1)\n",
+      "Requirement already satisfied: setuptools in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (47.1.1.post20200604)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (3.0.2)\n",
+      "Requirement already satisfied: plac<1.2.0,>=0.9.6 in /opt/miniconda3/lib/python3.8/site-packages (from spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (1.1.3)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /opt/miniconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (3.0.4)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /opt/miniconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (2.9)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /opt/miniconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (1.25.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/miniconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy<2.4.0,>=2.3.0->en_core_web_sm==2.3.1) (2020.6.20)\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the model via spacy.load('en_core_web_sm')\n",
+      "\u001b[38;5;2m✔ Linking successful\u001b[0m\n",
+      "/opt/miniconda3/lib/python3.8/site-packages/en_core_web_sm -->\n",
+      "/opt/miniconda3/lib/python3.8/site-packages/spacy/data/en\n",
+      "You can now load the model via spacy.load('en')\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "from spacy import displacy\n",
@@ -26,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,13 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# primary entry point\n",
     "def mine(json_doc):\n",
     "    results = []\n",
+    "    \n",
+    "    print(get_verbs(json_doc, [\"is\", \"are\", \"were\"]))\n",
     "    \n",
     "    for verb in get_verbs(json_doc, [\"is\", \"are\", \"were\"]):\n",
     "        children = children_for(json_doc, verb[\"id\"])\n",
@@ -199,15 +233,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text': 'The fastest biped is the ostrich.', 'ents': [], 'sents': [{'start': 0, 'end': 33}], 'tokens': [{'id': 0, 'start': 0, 'end': 3, 'pos': 'DET', 'tag': 'DT', 'dep': 'det', 'head': 2}, {'id': 1, 'start': 4, 'end': 11, 'pos': 'ADJ', 'tag': 'JJS', 'dep': 'amod', 'head': 2}, {'id': 2, 'start': 12, 'end': 17, 'pos': 'VERB', 'tag': 'VBN', 'dep': 'nsubj', 'head': 3}, {'id': 3, 'start': 18, 'end': 20, 'pos': 'VERB', 'tag': 'VBZ', 'dep': 'ROOT', 'head': 3}, {'id': 4, 'start': 21, 'end': 24, 'pos': 'DET', 'tag': 'DT', 'dep': 'det', 'head': 5}, {'id': 5, 'start': 25, 'end': 32, 'pos': 'NOUN', 'tag': 'NN', 'dep': 'attr', 'head': 3}, {'id': 6, 'start': 32, 'end': 33, 'pos': 'PUNCT', 'tag': '.', 'dep': 'punct', 'head': 3}]}\n",
+      "The fastest biped is the ostrich.\n",
+      "\n",
+      "[{'id': 3, 'start': 18, 'end': 20, 'pos': 'VERB', 'tag': 'VBZ', 'dep': 'ROOT', 'head': 3}]\n",
+      "[{'word': ['fastest', 'biped'], 'properties': ['ostrich']}]\n",
+      "{'text': 'Not all tetrapods are quadrupeds and not all quadrupeds are tetrapods.', 'ents': [], 'sents': [{'start': 0, 'end': 70}], 'tokens': [{'id': 0, 'start': 0, 'end': 3, 'pos': 'ADV', 'tag': 'RB', 'dep': 'neg', 'head': 2}, {'id': 1, 'start': 4, 'end': 7, 'pos': 'DET', 'tag': 'DT', 'dep': 'det', 'head': 2}, {'id': 2, 'start': 8, 'end': 17, 'pos': 'NOUN', 'tag': 'NNS', 'dep': 'nsubj', 'head': 3}, {'id': 3, 'start': 18, 'end': 21, 'pos': 'VERB', 'tag': 'VBP', 'dep': 'ROOT', 'head': 3}, {'id': 4, 'start': 22, 'end': 32, 'pos': 'NOUN', 'tag': 'NNS', 'dep': 'attr', 'head': 3}, {'id': 5, 'start': 33, 'end': 36, 'pos': 'CCONJ', 'tag': 'CC', 'dep': 'cc', 'head': 3}, {'id': 6, 'start': 37, 'end': 40, 'pos': 'ADV', 'tag': 'RB', 'dep': 'neg', 'head': 8}, {'id': 7, 'start': 41, 'end': 44, 'pos': 'DET', 'tag': 'DT', 'dep': 'det', 'head': 8}, {'id': 8, 'start': 45, 'end': 55, 'pos': 'NOUN', 'tag': 'NNS', 'dep': 'nsubj', 'head': 9}, {'id': 9, 'start': 56, 'end': 59, 'pos': 'VERB', 'tag': 'VBP', 'dep': 'conj', 'head': 3}, {'id': 10, 'start': 60, 'end': 69, 'pos': 'NOUN', 'tag': 'NNS', 'dep': 'attr', 'head': 9}, {'id': 11, 'start': 69, 'end': 70, 'pos': 'PUNCT', 'tag': '.', 'dep': 'punct', 'head': 9}]}\n",
+      "Not all tetrapods are quadrupeds and not all quadrupeds are tetrapods.\n",
+      "\n",
+      "[{'id': 3, 'start': 18, 'end': 21, 'pos': 'VERB', 'tag': 'VBP', 'dep': 'ROOT', 'head': 3}, {'id': 9, 'start': 56, 'end': 59, 'pos': 'VERB', 'tag': 'VBP', 'dep': 'conj', 'head': 3}]\n",
+      "[{'word': ['not', 'tetrapods'], 'properties': ['quadrupeds', 'and', 'not', 'quadrupeds', 'are', 'tetrapods', '.']}, {'word': ['not', 'quadrupeds'], 'properties': ['tetrapods']}]\n"
+     ]
+    }
+   ],
    "source": [
-    "for sentence in sentence_group_2:\n",
+    "for sentence in sentence_group_2[0:2]:\n",
     "    doc = nlp((sentence))\n",
     "    json_doc = doc.to_json()\n",
     "    \n",
-    "    print()\n",
+    "    print(json_doc)\n",
     "    print(json_doc[\"text\"])\n",
     "    print()\n",
     "    print(mine(json_doc))\n",
